ajout des liens

--- a/index.html
+++ b/index.html
@@ -64,18 +64,15 @@
             <h2 class="text-center">A propos</h2>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/person.png" class="imageAboutPage" alt="">
+                    <img src="images/oumayma.jpg" class="imageAboutPage" alt="Oumayma Dimassi">
                 </div>
 
                 <div class="col-lg-8">
-                    <p> Je m'appelle  Dimassi Oumayma , je suis en reconversion professionelle
-                         aprés une premiére carrière en tant que qu'orthophoniste .Passionnée par les technologies du numérique ,
-                         je me suis spécialisée dans le domaine du test logiciel . Je suis certifiée de l 'ISTQB'ainsi que testeur 
-                         certifiée par la plateforme Openclassrooms . Au fil de ma formation et de mes projets , jai acquis une solide
-                          maitrise des outils et des langages tels que javascript , HTML , CSS et React . J'interviens dans toutes les 
-                          toutes les phases du processus de test , de la définition  des cas de test à l'optimisation des bugs , en passant
-                          par l'analyse fonctionnelle . Mon profil polyvalent et ma capacité d'adaptation me permettent de m'intégrer
-                           efficacement à des projets variés . 
+                    <br><br><br>
+                    <p> Je m'appelle Dimassi Oumayma, je suis en reconversion professionelle aprés une premiére carrière en tant que qu'orthophoniste. Passionnée par les technologies du numérique, je me suis spécialisée dans le domaine du test logiciel. Je suis certifiée de l'ISTQB ainsi que testeur 
+                         certifiée par la plateforme Openclassrooms. Au fil de ma formation et de mes projets, j'ai acquis une solide maitrise des outils et des langages tels que javascript, HTML, CSS et React. J'interviens dans toutes les 
+                          toutes les phases du processus de test, de la définition  des cas de test à l'optimisation des bugs, en passant par l'analyse fonctionnelle. Mon profil polyvalent et ma capacité d'adaptation me permettent de m'intégrer
+                           efficacement à des projets variés. 
 
                     </p>
                     <div class="row mt-3">
@@ -120,17 +117,18 @@
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-solid fa-phone fa-4x"></i>
                     <h3>Téléphone</h3>
-                    <p>07626982</p>
+                    <a href="tel:0762968275"><p>0762968275</p></a>
+                    <p></p>
                 </div>
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-regular fa-envelope fa-4x"></i>
                     <h3>Adresse email</h3>
-                    <p>zarradoumayma@gmail.com</p>
+                    <a href="mailto:zarradoumayma@gmail.com"><p>zarradoumayma@gmail.com</p></a>
                 </div>
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-brands fa-linkedin-in fa-4x"></i>
                     <h3>LinkedIn</h3>
-                    <p>LinkedIn Name</p>
+                    <a href="https://www.linkedin.com/in/oumayma-zarred-98b56231a?trk=blended-typeahead" class="a-reset"><p>Oumayma Zarrad</p></a>
                 </div>
             </div>
         </div>
