ajout des liens

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-4 mt-4 contactColumn">
                     <i class="fa-brands fa-linkedin-in fa-4x"></i>
                     <h3>LinkedIn</h3>
-                    <a href="https://www.linkedin.com/in/oumayma-zarred-98b56231a?trk=blended-typeahead" class="a-reset"><p>Oumayma Zarrad</p></a>
+                    <a href="https://www.linkedin.com/in/oumayma-zarred-98b56231a?trk=blended-typeahead" target="_blank"><p>Oumayma Zarrad</p></a>
                 </div>
             </div>
         </div>
