--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Portfolio Name</title>
+    <meta name="description" content="Portfolio présentant mes projets créatifs et mes compétences en développement web, design et technologies modernes. Découvrez mon savoir-faire et mes réalisations">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- linking css file -->
