--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <ul>
                                 <li>Nom: Dimassi Oumayma</li>
                                 <li>Age: 27</li>
-                                <li>Testeuse loiciel</li>
+                                <li>Testeuse logiciel</li>
 
                             </ul>
                         </div>
