--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- linking css file -->
      
-    <link href="bootstrap.min.css" rel="stylesheet" rel="preload">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css" rel="preload">
     <!-- bootstrap CDN -->
 
@@ -136,7 +136,7 @@
     </section>
 
     <!-- load javascript after loading all html content -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="preload">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="script/bootstrap.bundle.min.js"></script>
     <script src="script/script.js"></script>
 </body>
