--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- linking css file -->
      
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" rel="preload">
+    <link rel="stylesheet" href="style.css">
     <!-- bootstrap CDN -->
 
 </head>
