--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap CDN -->
-
 </head>
 
 <body>
@@ -53,7 +52,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h1 class="hero_title contrast">Salut, moi c'est Oumayma</h1>
-                    <h2 class="hero_desc contrast">Je suis testeuse logiciel  junior</h2>
+                    <p class="hero_desc contrast">Je suis testeuse logiciel  junior</p>
                 </div>
             </div>
         </div>
