--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <p class="hero_desc contrast">Je suis testeuse logiciel  junior</p>
+                    <h1 class="hero_title contrast"></h1>
+                    <p class="hero_desc contrast"></p>
                 </div>
             </div>
         </div>
