--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Portfolio Name</title>
+    <title>Portfolio Oumayma Dimassi</title>
     <meta name="description" content="Portfolio présentant mes projets créatifs et mes compétences en développement web, design et technologies modernes. Découvrez mon savoir-faire et mes réalisations">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll contrast">
         <div class="container">
-            <a class="navbar-brand" href="#">Name</a>
+            <a class="navbar-brand" href="#">Oumayma Dimassi</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -132,7 +132,6 @@
 
     <!-- load javascript after loading all html content -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="script/bootstrap.bundle.min.js"></script>
     <script src="script/script.js"></script>
 </body>
 
