--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 
     <!-- load javascript after loading all html content -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="script/bootstrap.bundle.min.js"></script>
     <script src="script/script.js"></script>
 </body>
 
