--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
     <!-- load javascript after loading all html content -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="script/bootstrap.bundle.min.js" defer></script>
-    <script src="script/script.js" defer></script>
+    <script src="script/bootstrap.bundle.min.js" async></script>
+    <script src="script/script.js" async></script>
 </body>
 
 </html>
