--- a/index.html
+++ b/index.html
@@ -3,132 +3,144 @@
 
 <head>
     <title>Portfolio Oumayma Dimassi</title>
-    <meta name="description" content="Portfolio présentant mes projets créatifs et mes compétences en développement web, design et technologies modernes. Découvrez mon savoir-faire et mes réalisations">
+    <meta name="description"
+        content="Portfolio présentant mes projets créatifs et mes compétences en développement web, design et technologies modernes. Découvrez mon savoir-faire et mes réalisations">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll contrast">
-        <div class="container">
-            <a class="navbar-brand" href="#">Oumayma Dimassi</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto navbarDark">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#home">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">A propos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#skills">Compétences</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contactez-moi</a>
-                    </li>
-                </ul>
+    <header>
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll contrast">
+            <div class="container">
+                <a class="navbar-brand" href="#">Oumayma Dimassi</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto navbarDark">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#home">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">A propos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">Compétences</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#portfolio">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contactez-moi</a>
+                        </li>
+                    </ul>
 
-            </div>
-        </div>
-    </nav>
-
-    <!-- main banner -->
-    <section class="bgimage" id="home">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h1 class="hero_title contrast">Salut, moi c'est Oumayma</h1>
-                    <p class="hero_desc contrast">Je suis testeuse logiciel  junior</p>
                 </div>
             </div>
-        </div>
-    </section>
+        </nav>
+    </header>
 
-    <!-- about section-->
-    <section id="about">
-        <div class="container mt-4 pt-4">
-            <h2 class="text-center">A propos</h2>
-            <div class="row mt-4">
-                <div class="col-lg-4">
-                    <img src="images/oumayma.jpg" class="imageAboutPage" alt="Oumayma Dimassi">
-                </div>
-
-                <div class="col-lg-8">
-                    <br><br><br>
-                    <p> Je m'appelle Dimassi Oumayma, je suis en reconversion professionelle aprés une premiére carrière en tant que qu'orthophoniste. Passionnée par les technologies du numérique, je me suis spécialisée dans le domaine du test logiciel. Je suis certifiée de l'ISTQB ainsi que testeur 
-                         certifiée par la plateforme Openclassrooms. Au fil de ma formation et de mes projets, j'ai acquis une solide maitrise des outils et des langages tels que javascript, HTML, CSS et React. J'interviens dans toutes les 
-                          toutes les phases du processus de test, de la définition  des cas de test à l'optimisation des bugs, en passant par l'analyse fonctionnelle. Mon profil polyvalent et ma capacité d'adaptation me permettent de m'intégrer
-                           efficacement à des projets variés. 
-
-                    </p>
-                    <div class="row mt-3">
-                        <div class="col-md-6">
-                            <ul>
-                                <li>Nom: Dimassi Oumayma</li>
-                                <li>Age: 27</li>
-                                <li>Testeuse logiciel</li>
-
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                           
-                        </div>
+    <main>
+        <!-- main banner -->
+        <section class="bgimage" id="home">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                        <h1 class="hero_title">Salut, moi c'est Oumayma</h1>
+                        <p class="hero_desc">Je suis testeuse logiciel junior</p>
                     </div>
-                    <div class="row mt-3">
-                        <p> 
+                </div>
+            </div>
+        </section>
+
+        <!-- about section-->
+        <section id="about">
+            <div class="container mt-4 pt-4">
+                <h2 class="text-center">A propos</h2>
+                <div class="row mt-4">
+                    <div class="col-lg-4">
+                        <img src="images/oumayma.jpg" class="imageAboutPage" alt="Oumayma Dimassi">
+                    </div>
+
+                    <div class="col-lg-8">
+                        <br><br><br>
+                        <p> Je m'appelle Dimassi Oumayma, je suis en reconversion professionelle aprés une premiére
+                            carrière en tant que qu'orthophoniste. Passionnée par les technologies du numérique, je me
+                            suis spécialisée dans le domaine du test logiciel. Je suis certifiée de l'ISTQB ainsi que
+                            testeur
+                            certifiée par la plateforme Openclassrooms. Au fil de ma formation et de mes projets, j'ai
+                            acquis une solide maitrise des outils et des langages tels que javascript, HTML, CSS et
+                            React. J'interviens dans toutes les
+                            toutes les phases du processus de test, de la définition des cas de test à l'optimisation
+                            des bugs, en passant par l'analyse fonctionnelle. Mon profil polyvalent et ma capacité
+                            d'adaptation me permettent de m'intégrer
+                            efficacement à des projets variés.
                         </p>
+                        <div class="row mt-3">
+                            <div class="col-md-6">
+                                <ul>
+                                    <li>Nom: Dimassi Oumayma</li>
+                                    <li>Age: 27</li>
+                                    <li>Testeuse logiciel</li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <!-- skills section-->
+        <section id="skills">
+            <div class="container">
+                <h2 class="text-center">Mes compétences</h2>
+            </div>
+        </section>
+
+        <!-- portfolio section-->
+        <section id="portfolio">
+            <div class="container mt-3">
+                <h2 class="text-center">Mes projets</h2>
+        </section>
+    </main>
+    <footer>
+        <!-- contact section-->
+        <section id="contact">
+            <div class="container mt-3 contactContent">
+                <h2 class="text-center">Contactez-moi</h2>
+                <div class="row">
+                    <div class="col-lg-4 mt-4 contactColumn">
+                        <i class="fa-solid fa-phone fa-4x"></i>
+                        <h3>Téléphone</h3>
+                        <a href="tel:0762968275">
+                            <p>0762968275</p>
+                        </a>
+                        <p></p>
+                    </div>
+                    <div class="col-lg-4 mt-4 contactColumn">
+                        <i class="fa-regular fa-envelope fa-4x"></i>
+                        <h3>Adresse email</h3>
+                        <a href="mailto:zarradoumayma@gmail.com">
+                            <p>zarradoumayma@gmail.com</p>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 mt-4 contactColumn">
+                        <i class="fa-brands fa-linkedin-in fa-4x"></i>
+                        <h3>LinkedIn</h3>
+                        <a href="https://www.linkedin.com/in/oumayma-zarred-98b56231a?trk=blended-typeahead"
+                            target="_blank">
+                            <p>Oumayma Zarrad</p>
+                        </a>
                     </div>
                 </div>
             </div>
-    </section>
-
-    <!-- skills section-->
-    <section id="skills">
-        <div class="container">
-            <h2 class="text-center">Mes compétences</h2>
-        </div>
-    </section>
-
-    <!-- portfolio section-->
-    <section id="portfolio">
-        <div class="container mt-3">
-            <h2 class="text-center">Mes projets</h2>
-    </section>
-
-    <!-- contact section-->
-    <section id="contact">
-        <div class="container mt-3 contactContent">
-            <h2 class="text-center">Contactez-moi</h2>
-            <div class="row">
-                <div class="col-lg-4 mt-4 contactColumn">
-                    <i class="fa-solid fa-phone fa-4x"></i>
-                    <h3>Téléphone</h3>
-                    <a href="tel:0762968275"><p>0762968275</p></a>
-                    <p></p>
-                </div>
-                <div class="col-lg-4 mt-4 contactColumn">
-                    <i class="fa-regular fa-envelope fa-4x"></i>
-                    <h3>Adresse email</h3>
-                    <a href="mailto:zarradoumayma@gmail.com"><p>zarradoumayma@gmail.com</p></a>
-                </div>
-                <div class="col-lg-4 mt-4 contactColumn">
-                    <i class="fa-brands fa-linkedin-in fa-4x"></i>
-                    <h3>LinkedIn</h3>
-                    <a href="https://www.linkedin.com/in/oumayma-zarred-98b56231a?trk=blended-typeahead" target="_blank"><p>Oumayma Zarrad</p></a>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </footer>
 
     <!-- load javascript after loading all html content -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
