--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll contrast">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
             <div class="container">
                 <a class="navbar-brand" href="#">Oumayma Dimassi</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -51,7 +51,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                        <h1 class="hero_title">Salut, moi c'est Oumayma</h1>
+                        <h1 class="hero_title"></h1>
                         <p class="hero_desc">Je suis testeuse logiciel junior</p>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
 
                     <div class="col-lg-8">
                         <br><br><br>
-                        <p> Je m'appelle Dimassi Oumayma, je suis en reconversion professionelle aprés une premiére
+                        <p id="desc"> Je m'appelle Dimassi Oumayma, je suis en reconversion professionelle aprés une premiére
                             carrière en tant que qu'orthophoniste. Passionnée par les technologies du numérique, je me
                             suis spécialisée dans le domaine du test logiciel. Je suis certifiée de l'ISTQB ainsi que
                             testeur
