--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <h1 class="hero_title"></h1>
-                        <p class="hero_desc">Je suis testeuse logiciel junior</p>
+                        <p class="hero_desc"></p>
                     </div>
                 </div>
             </div>
@@ -69,18 +69,7 @@
 
                     <div class="col-lg-8">
                         <br><br><br>
-                        <p id="desc"> Je m'appelle Dimassi Oumayma, je suis en reconversion professionelle aprés une premiére
-                            carrière en tant que qu'orthophoniste. Passionnée par les technologies du numérique, je me
-                            suis spécialisée dans le domaine du test logiciel. Je suis certifiée de l'ISTQB ainsi que
-                            testeur
-                            certifiée par la plateforme Openclassrooms. Au fil de ma formation et de mes projets, j'ai
-                            acquis une solide maitrise des outils et des langages tels que javascript, HTML, CSS et
-                            React. J'interviens dans toutes les
-                            toutes les phases du processus de test, de la définition des cas de test à l'optimisation
-                            des bugs, en passant par l'analyse fonctionnelle. Mon profil polyvalent et ma capacité
-                            d'adaptation me permettent de m'intégrer
-                            efficacement à des projets variés.
-                        </p>
+                        <p id="desc"></p>
                         <div class="row mt-3">
                             <div class="col-md-6">
                                 <ul>
